--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -42,7 +42,7 @@ body {
 	h1,h2,h3,h4,h5,h6, p {
 		text-align:center;
 		max-width:80vw;
-		margin:0 auto !important;
+		margin:0 auto;
 		display:block;
 	}
 	h1,h2,h3,h4,h5,h6 {font-family: helvetica;}
