--- a/app/assets/stylesheets/work.css
+++ b/app/assets/stylesheets/work.css
@@ -8,11 +8,6 @@
 @media screen and (min-width: 500px) {
 	#page-work {}
 
-/*	.project, .opaque-overlay {
-		width: 30vw;
-		height: 30vw;
-	}*/
-
 	.project {
 		width: 27vw;
 		height: 27vw;
@@ -23,11 +18,12 @@
 		background-size:auto;
 	}
 	.project:hover {background-image:none !important;}
+	.project h3 {margin: 1vw 0 1vw 0 !important;}
 	
 	.description {display:none;}
 	.description p {
 		text-align: left;
-		margin: 20px;
+		margin: 2vw !important;
 	}
 
 }
