made individual pdfs for portfolio on website

--- a/app/views/work/inked_voices.html.erb
+++ b/app/views/work/inked_voices.html.erb
@@ -1,1 +1,3 @@
-inked_voices
+<main data-page-name="Yelp">
+  <embed class="pdf-view" src="/pdfs/projects/inked-voices.pdf" type="application/pdf"/>
+</main>
