--- a/app/views/work/linkedin.html.erb
+++ b/app/views/work/linkedin.html.erb
@@ -1,1 +1,3 @@
-linkedin
+<main data-page-name="Yelp">
+  <embed class="pdf-view" src="/pdfs/projects/linkedin.pdf" type="application/pdf"/>
+</main>
