made individual pdfs for portfolio on website

--- a/app/views/work/work.html.erb
+++ b/app/views/work/work.html.erb
@@ -1,5 +1,6 @@
 <!-- render 'work/work_partials/work_nav' -->
 <main data-page-name="Work" id="page-work">
+  <h4><a href="/portfolio">See my full portfolio as one pdf</a></h4>
   
   <!--     <section class="project">
       <h3></h3>
