--- a/app/assets/stylesheets/work.css
+++ b/app/assets/stylesheets/work.css
@@ -7,6 +7,7 @@
 /* desktop version */
 @media screen and (min-width: 500px) {
 	#page-work {}
+	#page-work h4 {margin-top: 4vw !important;}
 
 	.project {
 		width: 27vw;
