--- a/app/assets/stylesheets/work.css
+++ b/app/assets/stylesheets/work.css
@@ -1,6 +1,25 @@
 /* mobile version */
 @media screen and (max-width: 500px) {
+	#page-work {}
+	#page-work h4 {margin-top: 4vw !important;}
 
+	.project {
+		width: 90vw;
+		height: 45vw;
+		float: left;
+		margin: 5vw;
+		border: 1.25vw solid turquoise;
+		border-radius: 2.5vw;
+		background-size:auto;
+	}
+	/*.project:hover {background-image:none !important;}*/
+	.project h3 {margin: 1vw 0 1vw 0 !important;}
+	
+	.description {display:none;}
+/*	.description p {
+		text-align: left;
+		margin: 2vw !important;
+	}*/
 
 }
 
