--- a/app/views/home/navbar/_primary_navbar.html.erb
+++ b/app/views/home/navbar/_primary_navbar.html.erb
@@ -23,8 +23,7 @@
       <li><a href="/">Adrian Lin</a></li> <!-- this will be my logo -->
       <li><a href="/about">About me</a></li>
       <li><a href="/resume">Resume</a></li>
-      <li><a href="/ux">UX design</a></li>
-      <li><a href="/coding">Coding</a></li>
+      <li><a href="/work">Work</a></li>
       <li><a href="/contact">Contact</a></li>
       <!-- <li><a href="/blog">Blog</a></li> -->
     </ul>
