--- a/app/views/work/work.html.erb
+++ b/app/views/work/work.html.erb
@@ -93,7 +93,7 @@
 
   
   function createProjectSlideUpPanel() {
-    if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+    if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) === false ) {
 
     $('.project')
       .mouseover(function(){
