--- a/app/views/work/inked_voices.html.erb
+++ b/app/views/work/inked_voices.html.erb
@@ -1,3 +1,3 @@
-<main data-page-name="Yelp">
+<main data-page-name="Inked Voices">
   <embed class="pdf-view" src="/pdfs/projects/inked-voices.pdf" type="application/pdf"/>
 </main>
