--- a/app/views/work/yelp.html.erb
+++ b/app/views/work/yelp.html.erb
@@ -1,3 +1,8 @@
-<main data-page-name="Yelp">
+<!-- <main data-page-name="Yelp">
   <embed class="pdf-view" src="/pdfs/projects/yelp.pdf" type="application/pdf"/>
+</main> -->
+
+<main data-page-name="Yelp" class="page-pdf">
+<object data="/pdfs/projects/yelp.pdf" type="application/pdf" width="100%">
+</object>
 </main>
