trying to get pdfs to show up on mobile

--- a/app/assets/stylesheets/work.css
+++ b/app/assets/stylesheets/work.css
@@ -1,5 +1,5 @@
 .page-pdf {width:100%;}
-.page-pdf object {height:100vh;}
+.page-pdf object {max-height:100%;}
 
 /* mobile version */
 @media screen and (max-width: 500px) {
