trying to get pdfs to show up on mobile

--- a/app/views/home/resume.html.erb
+++ b/app/views/home/resume.html.erb
@@ -1,3 +1,7 @@
-<main data-page-name="Resume">
-  <embed class="pdf-view" src="/pdfs/Adrian-Lin-Resume.pdf" type="application/pdf"/>
+<main data-page-name="Resume" id="page-resume">
+  <object class="pdf-view" data="/pdfs/Adrian-Lin-Resume.pdf" type="application/pdf" width="100"/></object>
+</main>
+
+<main id="m-page-resume">
+  <%= image_tag("/pdfs/Adrian-Lin-Resume.png", :alt => "Resume") %>
 </main>
