--- a/app/views/work/linkedin.html.erb
+++ b/app/views/work/linkedin.html.erb
@@ -1,3 +1,6 @@
-<main data-page-name="Yelp">
-  <embed class="pdf-view" src="/pdfs/projects/linkedin.pdf" type="application/pdf"/>
+<main data-page-name="LinkedIn" class="page-portfolio">
+  <%= image_tag("/projects/linkedin/1.png", :alt => "linkedin") %>
+  <%= image_tag("/projects/linkedin/2.png", :alt => "linkedin") %>
+  <%= image_tag("/projects/linkedin/3.png", :alt => "linkedin") %>
+  <%= image_tag("/projects/linkedin/4.png", :alt => "linkedin") %>
 </main>
