--- a/app/views/work/yelp.html.erb
+++ b/app/views/work/yelp.html.erb
@@ -1,8 +1,8 @@
-<!-- <main data-page-name="Yelp">
-  <embed class="pdf-view" src="/pdfs/projects/yelp.pdf" type="application/pdf"/>
-</main> -->
 
-<main data-page-name="Yelp" class="page-pdf">
-<object data="/pdfs/projects/yelp.pdf" type="application/pdf" width="100%">
-</object>
+
+<main data-page-name="Yelp" class="page-portfolio">
+  <%= image_tag("/projects/yelp/1.png", :alt => "yelp") %>
+  <%= image_tag("/projects/yelp/2.png", :alt => "yelp") %>
+  <%= image_tag("/projects/yelp/3.png", :alt => "yelp") %>
+  <%= image_tag("/projects/yelp/4.png", :alt => "yelp") %>
 </main>
