--- a/app/assets/stylesheets/work.css
+++ b/app/assets/stylesheets/work.css
@@ -1,5 +1,5 @@
-.page-pdf {width:100%;}
-.page-pdf object {max-height:100%;}
+.page-portfolio img {width:100%;}
+.pdf-view {width:100%;}
 
 /* mobile version */
 @media screen and (max-width: 500px) {
@@ -23,6 +23,7 @@
 		text-align: left;
 		margin: 2vw !important;
 	}*/
+	#page-resume {display:none;}
 
 
 }
@@ -49,5 +50,7 @@
 		text-align: left;
 		margin: 2vw !important;
 	}
+
+	#m-page-resume {display:none;}
 
 }
