--- a/app/views/work/inked_voices.html.erb
+++ b/app/views/work/inked_voices.html.erb
@@ -1,3 +1,6 @@
-<main data-page-name="Inked Voices">
-  <embed class="pdf-view" src="/pdfs/projects/inked-voices.pdf" type="application/pdf"/>
+<main data-page-name="Inked Voices" class="page-portfolio">
+  <%= image_tag("/projects/inkedvoices/1.png", :alt => "inked voices") %>
+  <%= image_tag("/projects/inkedvoices/2.png", :alt => "inked voices") %>
+  <%= image_tag("/projects/inkedvoices/3.png", :alt => "inked voices") %>
+  <%= image_tag("/projects/inkedvoices/4.png", :alt => "inked voices") %>
 </main>
