--- a/app/views/home/resume.html.erb
+++ b/app/views/home/resume.html.erb
@@ -1,7 +1,10 @@
+
+<!-- shows up on desktop -->
 <main data-page-name="Resume" id="page-resume">
   <object class="pdf-view" data="/pdfs/Adrian-Lin-Resume.pdf" type="application/pdf" width="100"/></object>
 </main>
 
+<!-- shows up in mobile -->
 <main id="m-page-resume">
   <%= image_tag("/pdfs/Adrian-Lin-Resume.png", :alt => "Resume") %>
 </main>
