fix bug in personal website in work

--- a/app/views/work/work.html.erb
+++ b/app/views/work/work.html.erb
@@ -61,7 +61,7 @@
         'Ruby on Rails'
       ],
       'description': '90% of what you see here is all coded by me!',
-      'link' '/work/personal-website'
+      'link': '/work/personal-website'
 
     }
   }
