added an image that looks cool

--- a/app/views/work/personal_website.html.erb
+++ b/app/views/work/personal_website.html.erb
@@ -1,3 +1,6 @@
-<h3>Coming soon...</h3>
 
-<%= image_tag("/projects/personalwebsite/coding.png", :alt => "coding") %>
+<main data-page-name="Personal Site" class="page-portfolio">
+  <h3>Coming soon...</h3>
+
+  <%= image_tag("/projects/personalwebsite/coding.png", :alt => "coding") %>
+</main>
