fixed naked url redirection issue using Refraction gem

--- a/app/views/home/navbar/_primary_navbar.html.erb
+++ b/app/views/home/navbar/_primary_navbar.html.erb
@@ -1,4 +1,5 @@
 
+
 <nav id="primary-nav" class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <ul class="nav navbar-nav">
@@ -33,6 +34,7 @@
 <script>
   $(document).ready(function(){
     setUpHamburgerMenu('normal');
+    highlightNavPage();
   });
 
   function setUpHamburgerMenu(speed){
