added ability to get pdf

--- a/app/views/work/inked_voices.html.erb
+++ b/app/views/work/inked_voices.html.erb
@@ -1,6 +1,10 @@
+
+
 <main data-page-name="Inked Voices" class="page-portfolio">
   <%= image_tag("/projects/inkedvoices/1.png", :alt => "inked voices") %>
   <%= image_tag("/projects/inkedvoices/2.png", :alt => "inked voices") %>
   <%= image_tag("/projects/inkedvoices/3.png", :alt => "inked voices") %>
   <%= image_tag("/projects/inkedvoices/4.png", :alt => "inked voices") %>
 </main>
+
+<a href="/work/inkedvoices/presentation" style="display:block; text-align:center;">Get pdf</a>
