--- a/app/views/work/linkedin.html.erb
+++ b/app/views/work/linkedin.html.erb
@@ -1,6 +1,10 @@
+
+
 <main data-page-name="LinkedIn" class="page-portfolio">
   <%= image_tag("/projects/linkedin/1.png", :alt => "linkedin") %>
   <%= image_tag("/projects/linkedin/2.png", :alt => "linkedin") %>
   <%= image_tag("/projects/linkedin/3.png", :alt => "linkedin") %>
   <%= image_tag("/projects/linkedin/4.png", :alt => "linkedin") %>
 </main>
+
+<a href="/work/linkedin/presentation" style="display:block; text-align:center;">Get pdf</a>
