--- a/app/views/work/yelp.html.erb
+++ b/app/views/work/yelp.html.erb
@@ -6,3 +6,5 @@
   <%= image_tag("/projects/yelp/3.png", :alt => "yelp") %>
   <%= image_tag("/projects/yelp/4.png", :alt => "yelp") %>
 </main>
+
+<a href="/work/yelp/presentation" style="display:block; text-align:center;">Get pdf</a>
